tests/parsing-test/test_out/bound-parse-out.txt
error: expected 'struct' | 'fn' | '#' but got 'bound'
 --> bound\root.ctl:1:5
  |
1 | pub bound [T] Some {     fn new() -> Self ; fn get(s : ^ Self) -> T ; fn [D]     set(s : ^ mut Self, v : D, t : T) ; }
  |     ^^^^^ token located here
  |
  = info: list -> item

